[build-system]
requires = [
  "pybind11==2.13.6",
  "scikit-build-core>=0.10",
  "torch==2.5.1",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "sgl-kernel"
version = "0.0.5.post3"
description = "Kernel Library for SGLang"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/sgl-project/sglang/tree/main/sgl-kernel"
"Bug Tracker" = "https://github.com/sgl-project/sglang/issues"

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"
wheel.license-files = []
wheel.packages = ["python/sgl_kernel"]
